--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-requests==2.28.0
+aiocache==0.11.1
 pandas==1.4.3
-seaborn==0.11.2
-streamlit==1.10.0
 plotly==5.9.0
+requests==2.28.0
+seaborn==0.11.2
+streamlit==1.11.0
+subgrounds==1.0.0
 streamlit-autorefresh
